 * Fix kstat related memory leaks on Solaris.
     (Thanks to Javier Donaire)
 * Fix network stats on some unusual Solaris setups.
 * Fix process time_spent on Linux.
     (Thanks to Fred Barnes)
 * Make interface up status check the link status as well.
     (Thanks to Michelangelo Vassallo)
 * Fix build on NetBSD 3.
     (Thanks to Wijnand Wiersma)

libstatgrab 0.13 (19 March 2006)
 * Fix build problems with recent linux kernels.
 * Make saidar truncate disk/inteface/mount names to fit in display.
 * Add WIN32 support using MINGW (not widely tested).
 * Fix network interface up/down status on Solaris.
 * Add extern "C" to header file to make linking with C++ code easier.
 * Fix statgrab to cope with filesystem paths containing dots.
 * Make NFS a legal filesystem type on all platforms.
 * A few minor build fixes.

libstatgrab 0.12 (31 July 2005)
 * More details added to filesystem statistics.
     (Patches provided by Roman Neuhauser)
 * Rework Linux partition detection.
 * Fix compile error in network stats on Linux 2.6.
     (Patches provided by Scott Lampert)
 * Change name of duplex value in network interface stats.
     NOTE: this minor change breaks the API.
 * Manual pages for saidar, statgrab and the other tools.
 * Fix minor typo in statgrab usage output.
 * Support for Solaris 10.
 * Support for FreeBSD 7.

libstatgrab 0.11.1 (03 March 2005)
 * Add NFS to list of supported filesystems.
 * Fix reporting of network interface duplex settings on Linux.
 * Fix saidar to support negative FS usage.

libstatgrab 0.11 (09 November 2004)
 * Add support for HP-UX 11.11.
    (Patches provided by Roy Keene)
 * Minor fixes to statgrab mrtg tools.
 * Minor fixes to saidar.
 * Minor code cleanups and fixes to libstatgrab.

libstatgrab 0.10.3 (24 August 2004)

 * Add -f flag to statgrab to display floating-point numbers multiplied
   by an integer.
 * Add -K, -M and -G flags to statgrab to show byte counts in kibibytes,
   mebibytes or gibibytes.